# kash-server

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  STYLE.md  codemap.md
.github/workflows/: build.yml
src/: auth.rs  categories.rs  codemap.md  config.rs  constants.rs  database.rs  db_pool.rs  friends.rs  lib.rs  main.rs  models.rs  records.rs  splits.rs  utils.rs
tests/: categories_isolation_test.rs  compensation_test.rs  domain_models_test.rs  e2e_concurrency_test.rs  e2e_lifecycle_test.rs  finalize_pending_test.rs  friendship_test.rs  integration_harness_test.rs  records_filters_test.rs  records_isolation_test.rs  records_migration_test.rs  schema_test.rs  settlement_test.rs  split_atomicity_test.rs  split_create_test.rs  split_list_test.rs  split_schema_test.rs  split_validation_test.rs  telegram_isolation_test.rs
tests/common/: mod.rs
ui/: Cargo.toml  Dioxus.toml
ui/assets/: main.css
ui/src/: api.rs  main.rs  models.rs  utils.rs
ui/src/components/: mod.rs  overlay.rs  shell.rs
ui/src/views/: auth.rs  categories.rs  dashboard.rs  mod.rs  settings.rs  stats.rs  transactions.rs
