[package]
name = "kash-server"
version = "0.2.0"
edition = "2024"

[lib]
name = "kash_server"
path = "src/lib.rs"

[[bin]]
name = "kash-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
dotenv = "0.15.0"
libsql = "0.9.19"
password-hash = { version = "0.5.0", features = ["rand_core"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = "0.17.0"
time = "0.3.41"
tokio = { version = "1.46.0", features = ["full"] }
tower-sessions = { version = "0.14.0", features = ["axum-core", "memory-store", "signed"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14.0"
tower = "0.4.13"
