[package]
name = "my-budget-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Headers",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
